<resources>
    <string name="app_name">Konsula</string>
    <string name="choose_ph">Pilih Foto</string>
    <string name="choose_ph1">Pilih</string>
    <string name="login_or_register">Login / Register</string>
    <string name="appointments">Jadwal Saya</string>
    <string name="help">Bantuan</string>
    <string name="prac">Tempat Praktek</string>
    <string name="prac2">Pilih Tempat Praktek</string>
    <string name="prac3">Mohon Pilih Tempat Praktek</string>
    <string name="prac4">Mohon Pilih Dokter</string>
    <string name="share">Bagikan</string>
    <string name="title_appointment">Janji Temu</string>
    <string name="billing">Transaksi Saya</string>
    <string name="purchase">Voucher Saya</string>
    <string name="profile">Profil Saya</string>
    <string name="text_profile">PROFIL</string>
    <string name="membership">Keanggotaan</string>
    <string name="rateUs">Nilai Kami</string>
    <string name="history">Riwayat</string>
    <string name="descriptions">DESKRIPSI</string>
    <string name="drawer_open">Buka</string>
    <string name="tulis_ulasan">TULIS ULASAN</string>
    <string name="drawer_close">Tutup</string>
    <string name="syarat_ketentuan"><![CDATA[Dengan menekan tombol \"Buat Janji\", saya mengkonfirmasi telah menyetujui Syarat & Ketentuan dan Kebijakan Privasi Konsula]]></string>
    <string name="tutup">TUTUP</string>
    <string name="lihat_review">Lihat Review</string>
    <string name="no_review">Tidak ada Review</string>
    <string name="lihat_peta"><u>Lihat peta</u></string>
    <string name="berikan_review">Tulis Ulasan</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="gratis_konsultasi">Konsultasi gratis</string>
    <string name="mulai_dari">Mulai dari</string>
    <string name="mulai_dari30k">Mulai dari IDR 30.000</string>
    <string name="lihat_service_lain">Lihat Selengkapnya({count})</string>
    <string name="lihat_review_lain">Lihat ulasan lainnya({count})</string>
    <string name="lihat_sedikit">Lihat sedikit</string>
    <string name="title_activity_choose_schedule">Pilih Lokasi &amp; Waktu</string>
    <string name="title_fragment_today">HARI INI,</string>
    <string name="title_activity_schedule">Jadwal</string>
    <string name="dialog_checking_validity">Memeriksa jadwal</string>
    <string name="dialog_title_please_wait">Tunggu sebentar</string>
    <string name="dialog_title_req">Mengirim permintaan</string>
    <string name="dialog_title_req_pembiayaan">Mengirim permintaan</string>
    <string name="dialog_title_send_data">Mengirim informasi</string>
    <string name="title_activity_booking_confirmation">Masukkan Informasi</string>
    <string name="hint_nama">Nama Lengkap</string>
    <string name="title_edit_profile">Perbaharui Akun</string>
    <string name="hint_tanggallahir">Tanggal Lahir</string>
    <string name="hint_notel">Nomor Telepon</string>
    <string name="saved">Foto tersimpan</string>
    <string name="text_must_phone">Nomor Telepon harus di antara 10 - 15 karakter.</string>
    <string name="text_warning_bloodtype">Golongan darah harus diisi</string>
    <string name="text_warning_height_weight">Tinggi badan dan berat badan harus diisi</string>
    <string name="dialog_tele">Tanggal, Nomor Telepon, Alasan, dan Spesialisasi wajib di isi.</string>
    <string name="hint_alamat">Alamat</string>
    <string name="hint_jenis_kelamin">Jenis Kelamin</string>
    <string name="hint_golongan_darah">Golongan darah</string>
    <string name="hint_tinggibadan">Tinggi Badan</string>
    <string name="hint_beratbadan">Berat Badan</string>
    <string name="dialog_register_input_all">Silahkan isi semua informasi</string>
    <string name="dialog_register_gender_all">Silahkan pilih jenis kelamin</string>
    <string name="facebook_app_id" translatable="false">162037024142939</string>
    <string name="title_about_us">Tentang Kami</string>
    <string name="general_text_dismiss">Tutup</string>
    <string name="text_phone_wa" translatable="false"><u>+62812 9190 2100</u> (Whatsapp/ SMS)</string>
    <string name="tittle_copyright_aboutus" translatable="false">\u00a9 2016 Konsula</string>
    <string-array name="server" translatable="false">
        <item>staging</item>
        <item>Production</item>
    </string-array>
    <string-array name="nav_name_menu">
        <item>Beranda</item>
        <item>Akun Saya</item>
        <item>Keanggotaan</item>
        <item>Transaksi Saya</item>
        <item>Voucher Saya</item>
        <item>Jadwal Saya</item>
        <item>Bagikan Aplikasi</item>
        <item>Beri Rating</item>
        <item>Tentang Kami</item>

    </string-array>
    <string name="nav_myaccount">Akun Saya</string>
    <string name="nav_editmyaccount">Edit Akun</string>
    <string name="title_activity_klinik_review">Ulasan</string>
    <string name="title_activity_google_map">GoogleMapActivity</string>
    <string name="con_mengunduh_data">Unduh Data</string>
    <string name="con_refresh">Refresh</string>
    <string name="hit_segera_hadir">Segera hadir</string>
    <string name="text_hubungi_kami">Hubungi kami di <u>cs@konsula.com,</u></string>
    <string name="text_selamat_datang">Selamat Datang di</string>
    <string name="dokter">Dokter</string>
    <string name="info">INFO</string>
    <string name="klinik">Klinik</string>
    <string name="cari">Cari</string>
    <string name="lokasi">Lokasi</string>
    <string name="search_lokasi">Tempat Praktek</string>
    <string name="spesialisasi">Spesialisasi</string>
    <string name="hint_search">Dokter, Klinik, Spesialisasi, dll.</string>
    <string name="hint_search_estore">Layanan Gigi, Scaling Gigi, dll.</string>
    <string name="text_header">Bisa kami bantu?</string>
    <string name="text_tagline">Tanya Dokter Saja!</string>
    <string name="text_header1">Kebutuhan Kesehatan Anda</string>
    <string name="text_direktori">Cari Dokter</string>
    <string name="text_pembayaran">Pembayaran</string>
    <string name="text_teledokter">Telepon dengan Dokter</string>
    <string name="text_chatdokter">Chat dengan Dokter</string>
    <string name="text_proteksi">Proteksi</string>
    <string name="text_pembiayaan">Pembiayaan</string>
    <string name="text_estore">Paket Health &amp; Beauty</string>
    <string name="text_update_header">Pembaruan Tersedia</string>
    <string name="text_update">Konsula versi baru sudah tersedia. Mohon Perbarui aplikasi anda.</string>
    <string name="button_remind">INGATKAN NANTI</string>
    <string name="button_update">PERBARUI</string>
    <string name="text_tunggu">Mohon tunggu ...</string>
    <string name="text_rekomendasi">Rekomendasi</string>
    <string name="direktori_sort_by">Urutkan</string>
    <string name="direktori_jadwal_praktek">Jadwal Praktek</string>
    <string name="direktori_jam_praktek">Jam Praktek</string>
    <string name="direktori_year_experience">Lama Pengalaman</string>
    <string name="direktori_year_operation">Lama Beroperasi</string>
    <string name="direktori_total_year_experience">{year} Tahun</string>
    <string name="direktori_biaya_konsultasi">Biaya Konsultasi</string>
    <string name="text_login">MASUK</string>
    <string name="text_login2">Masuk</string>
    <string name="text_forgot_pass">Lupa Sandi?</string>
    <string name="text_keep_sign">Keep me signed in</string>
    <string name="text_ryou_doctor">Anda seorang dokter</string>
    <string name="tetx_no_account">Tidak Punya akun? Daftar Di sini</string>
    <string name="text_register">Daftar</string>
    <string name="text_loginhere">Silahkan login di sini</string>
    <string name="login_with">atau login dengan</string>
    <string name="login_wrong_password">Email atau password salah</string>
    <string name="register_wrong_phone">Nomor Telepon harus di antara 10 \- 15 karakter.</string>
    <string name="text_aboutus_moto">Konsula bekerja untuk membuka akses kesehatan bagi seluruh masyarakat Indonesia</string>
    <string name="text_aboutus">Untuk mencapai itu, Konsula memulainya dengan memberikan kemudahan bagi masyarakat untuk mencari dan membuat janji dengan dokter yang mereka butuhkan. Konsula juga bekerja untuk meningkatkan kualitas layanan para tenaga medis dan klinik dengan menyediakan aplikasi yang memudahkan mereka dalam mengelola praktek mereka. Pada akhirnya, kami bermimpi untuk membawa sistem kesehatan di Indonesia masuk ke era digital.</string>
    <string name="tentangkami">Tentang Konsula</string>
    <string name="termcondition">Syarat &amp; Ketentuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="contactus">Hubungi Kami</string>
    <string name="email">Email</string>
    <string name="pesan">Pesan</string>
    <string name="kirim">Kirim</string>
    <string name="submit">Kirim</string>
    <string name="text_gagal">Gagal Unduh Data</string>
    <string name="something_wrong">Something went wrong, or no internet connection.</string>
    <string name="login_to_server">Login ke server</string>
    <string name="text_lupa">LUPA PASSWORD</string>
    <string name="text_lupa_detail"> Masukkan email yang lupa kata sandinya</string>
    <string name="kirim_email">KIRIM EMAIL</string>
    <string name="petunjuk_lupa">&#42;Periksa e-mail Anda untuk pengecekan instruksi cara reset password Anda, kemudian Anda bisa melakukan Login kembali.</string>
    <string name="login_kembali">Silahkan login kembali di sini</string>
    <string name="pilih_bahasa">Pilihan Bahasa</string>
    <string name="simpan">Simpan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="pilih_server">Pilih Server</string>
    <string name="ubahprofile">Ubah Profil Anda</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="text_keluar">Keluar</string>
    <string name="member_sejak">Member Sejak</string>
    <string name="text_konsultasi_gratis">Konsultasi gratis</string>
    <string name="pemesanan">Buat Janji</string>
    <string name="pagi">Pagi</string>
    <string name="siang">Siang</string>
    <string name="sore">Sore</string>
    <string name="malam">Malam</string>
    <string name="tetx_mulai_dari">mulai dari</string>
    <string name="dokter_rbo">Dokter</string>
    <string name="estore_package">Paket</string>
    <string name="estore_review">Ulasan</string>
    <string name="estore_confirm">Konfirmasi</string>
    <string name="estore_payment">Pembayaran</string>
    <string name="estore_total_cost">Harga Total</string>
    <string name="estore_invoice_no">INVOICE NO</string>
    <string name="estore_step_1">LANGKAH 1</string>
    <string name="estore_please_do_the_payment">Mohon lakukan pembayaran dalam waktu </string>
    <string name="estore_please_ensure_you_have_transferred">Mohon pastikan Anda mentransfer secara persis sejumlah</string>
    <string name="estore_step_2">LANGKAH 2</string>
    <string name="estore_please_upload_proof_of_payment">Mohon upload bukti pembayaran untuk mempercepat verifikasi</string>
    <string name="estore_upload_proof_of_payment">Upload Bukti Pembayaran</string>
    <string name="estore_have_you_transferred">Anda sudah mentransfer? Mohon lanjutkan dengan menekan pilihan di bawah ini</string>
    <string name="estore_payment_has_done">Saya telah melakukan pembayaran</string>
    <string name="estore_thank_you">TERIMA KASIH</string>
    <string name="estore_for">Untuk</string>
    <string name="estore_confirming_your_payment">Konfirmasi Pembayaran Anda</string>
    <string name="estore_item_2" translatable="false">Item</string>
    <string name="estore_price">Harga</string>
    <string name="estore_convenience_fee_2">Biaya Kenyamanan</string>
    <string name="estore_your_payment_will_be_verified">Pembayaran Anda akan segera diverifikasi oleh admin kami.</string>
    <string name="estore_status" translatable="false">Status</string>
    <string name="estore_confirmed">TERKONFIRMASI</string>
</resources>