<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border_bottom_light_gray">
    <com.konsula.app.ui.custom.CustomtextView
        android:id="@+id/estore_payment_step1"
        font:name="Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/space_8"
        android:paddingLeft="@dimen/space_4"
        android:paddingRight="@dimen/space_12"
        android:paddingBottom="@dimen/space_8"
        android:textSize="@dimen/space_12"
        android:background="@drawable/estore_separator"
        android:textColor="@color/step_inactive"
        android:text="@string/estore_package" />
    <com.konsula.app.ui.custom.CustomtextView
        android:id="@+id/estore_payment_step2"
        font:name="Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/space_8"
        android:paddingLeft="@dimen/space_4"
        android:paddingRight="@dimen/space_12"
        android:paddingBottom="@dimen/space_8"
        android:textSize="@dimen/space_12"
        android:background="@drawable/estore_separator"
        android:textColor="@color/step_inactive"
        android:text="@string/estore_review"/>
    <com.konsula.app.ui.custom.CustomtextView
        android:id="@+id/estore_payment_step3"
        font:name="Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/space_8"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/space_8"
        android:paddingBottom="@dimen/space_8"
        android:textSize="@dimen/space_12"
        android:background="@drawable/estore_separator"
        android:textColor="@color/step_inactive"
        android:text="@string/estore_payment"/>
    <com.konsula.app.ui.custom.CustomtextView
        android:id="@+id/estore_payment_step4"
        font:name="Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/space_8"
        android:paddingLeft="@dimen/space_4"
        android:paddingRight="@dimen/space_12"
        android:paddingBottom="@dimen/space_8"
        android:textSize="@dimen/space_12"
        android:textColor="@color/step_inactive"
        android:text="@string/estore_confirm"/>
</LinearLayout>