<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.konsula.app.ui.activity.estore.EstoreTransactionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="42dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <com.konsula.app.ui.custom.CustomtextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:layout_gravity="center"
                    android:textColor="@color/estore_text_color"
                    font:name="Label"
                    android:text="@string/estore_invoice_no"/>
                <com.konsula.app.ui.custom.CustomtextView
                    font:type="bold"
                    font:name="Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/estore_text_color"
                    android:text="17394739"/>
                <com.konsula.app.ui.custom.CustomtextView
                    font:name="Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:gravity="center"
                    android:padding="4dp"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/estore_text_color"
                    android:background="@drawable/border_bottom"
                    android:text="@string/estore_step_1"/>
                <com.konsula.app.ui.custom.CustomtextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/estore_text_color"
                    font:name="Label"
                    android:text="@string/estore_please_do_the_payment"/>
                <com.konsula.app.ui.custom.CustomtextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/estore_text_color"
                    font:name="Label"
                    android:text="@string/estore_please_ensure_you_have_transferred"/>
                <com.konsula.app.ui.custom.CustomtextView
                    font:type="bold"
                    font:name="Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/estore_text_color"
                    android:text="IDR 800.000"/>
                <LinearLayout
                    android:id="@+id/linear_bank_transfer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
                <com.konsula.app.ui.custom.CustomtextView
                    font:name="Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:gravity="center"
                    android:padding="4dp"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/estore_text_color"
                    android:background="@drawable/border_bottom"
                    android:text="@string/estore_step_2"/>
                <com.konsula.app.ui.custom.CustomtextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/estore_text_color"
                    font:name="Label"
                    android:text="@string/estore_please_upload_proof_of_payment"/>
                <com.konsula.app.ui.custom.CustomtextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:background="@drawable/shape_rounded_violet"
                    font:name="Label"
                    android:text="@string/estore_upload_proof_of_payment"
                    android:onClick="uploadPOP"/>
                <com.konsula.app.ui.custom.CustomtextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/estore_text_color"
                    font:name="Label"
                    android:text="@string/estore_have_you_transferred"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/border_top_light_gray"
        android:clickable="true"
        android:onClick="nextStep">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:background="@color/white">
            <com.konsula.app.ui.custom.CustomtextView
                font:name="Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/estore_text_color"
                android:text="@string/estore_payment_has_done"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/colorPrimaryEstore"
                android:layout_gravity="right|center"
                android:src="@drawable/arrow"/>
        </FrameLayout>
    </FrameLayout>
</FrameLayout>