<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.konsula.app.ui.activity.estore.EstoreTransactionConfirmedActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp">
                <com.konsula.app.ui.custom.CustomtextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28dp"
                    android:layout_gravity="center"
                    android:textColor="@color/estore_text_color"
                    font:name="Label"
                    font:type="bold"
                    android:text="@string/estore_thank_you"/>
                <com.konsula.app.ui.custom.CustomtextView
                    font:name="Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:gravity="center"
                    android:textColor="@color/estore_text_color"
                    android:text="@string/estore_for"/>
                <com.konsula.app.ui.custom.CustomtextView
                    font:name="Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:gravity="center"
                    android:textColor="@color/estore_text_color"
                    android:paddingBottom="16dp"
                    android:background="@drawable/border_bottom"
                    android:text="@string/estore_confirming_your_payment"/>
                <com.konsula.app.ui.custom.CustomtextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/estore_text_color"
                    font:name="Label"
                    android:text="@string/estore_invoice_no"/>
                <com.konsula.app.ui.custom.CustomtextView
                    font:type="bold"
                    font:name="Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/estore_text_color"
                    android:text="17394739"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.konsula.app.ui.custom.CustomtextView
                            font:name="Content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/estore_text_color"
                            android:text="@string/estore_item_2"/>
                        <com.konsula.app.ui.custom.CustomtextView
                            font:name="Content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/estore_text_color"
                            android:text="Paket 1: Rongga Atas"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.konsula.app.ui.custom.CustomtextView
                            font:name="Content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/estore_text_color"
                            android:text="@string/estore_price"/>
                        <com.konsula.app.ui.custom.CustomtextView
                            font:name="Content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/estore_text_color"
                            android:text="IDR 800.000"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:background="@drawable/border_bottom">
                        <com.konsula.app.ui.custom.CustomtextView
                            font:name="Content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/estore_text_color"
                            android:text="@string/estore_convenience_fee_2"/>
                        <com.konsula.app.ui.custom.CustomtextView
                            font:name="Content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/red_deep"
                            android:text="-IDR 500"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:orientation="horizontal">
                        <com.konsula.app.ui.custom.CustomtextView
                            font:type="bold"
                            font:name="Content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/estore_text_color"
                            android:text="@string/estore_total_cost"/>
                        <com.konsula.app.ui.custom.CustomtextView
                            font:type="bold"
                            font:name="Content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/estore_text_color"
                            android:text="IDR 799.500"/>
                    </LinearLayout>
                </LinearLayout>
                <com.konsula.app.ui.custom.CustomtextView
                    font:name="Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:gravity="center"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/estore_text_color"
                    android:background="@drawable/border_top"
                    android:text="@string/estore_your_payment_will_be_verified"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">
                    <com.konsula.app.ui.custom.CustomtextView
                        font:type="bold"
                        font:name="Content"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/estore_text_color"
                        android:text="@string/estore_status"/>
                    <com.konsula.app.ui.custom.CustomtextView
                        font:name="Content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginLeft="16dp"
                        android:textSize="24sp"
                        android:textColor="#5dc1a6"
                        android:text="@string/estore_confirmed"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_estore_konsula_logo"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>